# pickmechat

./: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
apps/chat/: .env.example  Dockerfile  pyproject.toml
apps/chat/app/: bootstrap.py  consumers.py  database.py  di.py  exceptions.py  models.py  monitoring.py  routes.py  settings.py
apps/chat/app/modules/assigment/: di.py  model.py  repository.py  router.py  schemas.py  service.py
apps/chat/app/modules/auth/: di.py  exceptions.py  router.py  schemas.py  security.py
apps/chat/app/modules/conversation/: di.py  model.py  repository.py  router.py  schemas.py  service.py
apps/chat/app/modules/healthcheck/: router.py  schemas.py
apps/chat/app/modules/message/: consumer.py  di.py  model.py  repository.py  router.py  schemas.py  service.py
apps/chat/app/modules/operator/: di.py  model.py  repository.py  router.py  schemas.py  service.py
apps/chat/app/modules/rbac/: di.py  router.py  schemas.py  security.py  service.py
apps/chat/app/modules/realtime/: di.py  events.py  transport.py
apps/chat/app/repositories/: database.py
apps/chat/app/schemas/: pagination.py  request_response.py
apps/chat/migrations/: env.py
apps/chat/migrations/versions/: 1c38e17ccaa9_added_last_read_table.py  2098aad53180_alter_messages_table_added_delivery_.py  28039c595dd1_added_availability_statuses_table.py  3d3e9d1e9975_added_attachments_table.py  7f4e0b319f1c_added_conversations_table.py  83b2e567b48a_added_operator_roles_and_role_.py  8cbbc104f33b_added_roles_and_permissions_tables.py  a1de59346622_added_attachments_table.py  d74cc7071334_added_messages_table.py  e81e8ccace90_added_assigments_table.py  fa751cc22e41_added_operator_table.py
apps/common/: pyproject.toml
apps/storage/: .env.example  Dockerfile  pyproject.toml
apps/storage/app/: __main__.py  bootstrap.py  di.py  exceptions.py  middlewares.py  monitoring.py  routes.py  settings.py
apps/storage/app/modules/file/: di.py  model.py  repository.py  router.py  schemas.py  service.py
apps/storage/app/modules/healthcheck/: router.py  schemas.py
apps/storage/app/repositories/: database.py
apps/storage/app/repositories/storage/: __init__.py  local.py  s3.py
apps/storage/app/schemas/: crud.py  exception.py
apps/storage/migrations/: env.py
apps/storage/migrations/versions/: 1e23139cf6a3_added_files_table.py
apps/telegram_connector/: .env.example  Dockerfile  pyproject.toml
apps/telegram_connector/app/: bootstrap.py  di.py  handlers.py  routes.py  settings.py
apps/telegram_connector/app/gateways/: di.py  storage.py
(+68 files in other folders)
