[project]
name = "pickmechat"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]

[tool.uv.workspace]
members = [
    "apps/chat",
    "apps/email_connector",
    "apps/common",
    "apps/telegram_connector",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", 'E7', 'E9', 'F']
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = false

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_optional = true

ignore_missing_imports = false
follow_imports = "silent"
follow_imports_for_stubs = true

strict_equality = true

plugins = [
    "pydantic.mypy"
]
